--- a/Fruzzy/pom.xml
+++ b/Fruzzy/pom.xml
@@ -26,6 +26,14 @@
   </build>
     <dependencies>
 
+ <!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itext7-core</artifactId>
+    <version>7.1.0</version>
+    <type>pom</type>
+</dependency>
+
 
 
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
