--- a/Fruzzy/pom.xml
+++ b/Fruzzy/pom.xml
@@ -162,6 +162,13 @@
 			<artifactId>jboss-transaction-api_1.2_spec</artifactId>
 			<version>1.0.1.Final</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 
